--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "December 10, 2006"
+.TH URLSCAN 1 "November 10, 2014"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
@@ -60,4 +60,4 @@ selected message.
 \fBmutt\fR(1)
 
 .SH AUTHOR
-This manual page was written by Daniel Burrows <dburrows@debian.org>.
+This manual page was written by Daniel Burrows <dburrows@debian.org> and Scott Hansen <firecat4153@gmail.com>
