Adds documentation about the option --no-browser.
And removes the mention about the dash in the README

--- a/urlscan.1
+++ b/urlscan.1
@@ -36,6 +36,10 @@ and base64.
 .B \-c, \-\-compact
 Display a simple list of the extracted URLs, instead of showing the
 context of each URL.
+.TP
+.B \-n, \-\-no-browser
+Disables the selection interface and print the links to standard output.
+Useful for scripting (implies \fB\-\-compact\fR).
 
 .SH MUTT INTEGRATION
 
