--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "February 26, 2017"
+.TH URLSCAN 1 "April 16, 2018"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
@@ -47,6 +47,12 @@ Remove duplicated URLs from the list of URLs.
 .B \-n, \-\-no-browser
 Disables the selection interface and print the links to standard output.
 Useful for scripting (implies \fB\-\-compact\fR).
+.TP
+.B \-r, \-\-run \<expression\>
+Execute \<expression\> in place of opening URL with a browser. Use {} in
+\<expression\> to substitute in the URL. Example:
+
+    $ urlscan --run 'echo {} | xclip -i' file.txt
 
 .SH MUTT INTEGRATION
 
