Update man page for search feature

--- a/urlscan.1
+++ b/urlscan.1
@@ -35,7 +35,10 @@ context view on/off with `c`.
 \fB3.\fR URLs are shortened by default to fit on one line. Toggle one or all
 shortened URLs with `s` or `S`.
 
-\fB4.\fR Cycle through all available palettes (color and black & white available
+\fB4.\fR Incremental case-insensitive search using `/`. Footer shows current
+search term. `/` again resets search.
+
+\fB5.\fR Cycle through all available palettes (color and black & white available
 by default) using `p`. `P` will generate a ~/.config/urlscan/config.json file
 for editing or adding additional pallettes. See
 
