--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "July 29, 2018"
+.TH URLSCAN 1 "January 14, 2019"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
@@ -48,6 +48,9 @@ for options and allowed values.
 
 \fB5.\fR `u` will unescape the highlighted URL if necessary.
 
+\fB6.\fR Run a command with the selected URL as the argument or pipe the selected
+  URL to a command using the `--run` and `--pipe` arguments.
+
 .SH OPTIONS
 .TP
 .B \-c, \-\-compact
@@ -66,6 +69,11 @@ Execute \<expression\> in place of opening URL with a browser. Use {} in
 \<expression\> to substitute in the URL. Example:
 
     $ urlscan --run 'echo {} | xclip -i' file.txt
+.TP
+.B \-p, \-\-pipe
+Pipe the selected URL to the command specified by `--run`. Example:
+
+    $ urlscan --run 'xclip -i' --pipe file.txt
 
 .SH MUTT INTEGRATION
 
