Add shortcut to copy URL to clipboard. Closes #78

--- a/urlscan.1
+++ b/urlscan.1
@@ -32,13 +32,15 @@ and base64.
 \fB2.\fR Extraction and display of the context surrounding each URL. Toggle
 context view on/off with `c`.
 
-\fB3.\fR URLs are shortened by default to fit on one line. Toggle one or all
+\fB3.\fR Copy current URL to clipboard primary selection with `C`.
+
+\fB4.\fR URLs are shortened by default to fit on one line. Toggle one or all
 shortened URLs with `s` or `S`.
 
-\fB4.\fR Incremental case-insensitive search using `/`. Footer shows current
+\fB5.\fR Incremental case-insensitive search using `/`. Footer shows current
 search term. `/` again resets search.
 
-\fB5.\fR Cycle through all available palettes (color and black & white available
+\fB6.\fR Cycle through all available palettes (color and black & white available
 by default) using `p`. `P` will generate a ~/.config/urlscan/config.json file
 for editing or adding additional pallettes. See
 
@@ -46,9 +48,9 @@ http://urwid.org/manual/displayattributes.html#display-attributes
 
 for options and allowed values.
 
-\fB5.\fR `u` will unescape the highlighted URL if necessary.
+\fB7.\fR `u` will unescape the highlighted URL if necessary.
 
-\fB6.\fR Run a command with the selected URL as the argument or pipe the selected
+\fB8.\fR Run a command with the selected URL as the argument or pipe the selected
   URL to a command using the `--run` and `--pipe` arguments.
 
 .SH OPTIONS
