Show help menu with F1 and show dynamic keybindings

--- a/urlscan.1
+++ b/urlscan.1
@@ -53,7 +53,7 @@ for color options and allowed values.
 \fB8.\fR Run a command with the selected URL as the argument or pipe the selected
   URL to a command using the `--run` and `--pipe` arguments.
 
-\fB9.\fR `F1` shows/hides the help menu.
+\fB9.\fR `F1` shows the help menu.
 
 .SH OPTIONS
 .TP
@@ -62,7 +62,7 @@ Display a simple list of the extracted URLs, instead of showing the
 context of each URL. Also toggle with `c` from within the viewer.
 .TP
 .B \-H, \-\-nohelp
-Start with help menu hidden.
+Start with header menu hidden.
 .TP
 .B \-d, \-\-dedupe
 Remove duplicated URLs from the list of URLs.
@@ -125,8 +125,6 @@ supported:
 \fBconfig_create\fR \-\- create ~/.config/urlscan/config.json
 .TP
 \fBcontext\fR \-\- show/hide context
-.TP
-\fBdigits\fR \-\- just the list numbers to jump to. Not really for use.
 .TP
 \fBdown\fR \-\- cursor down
 .TP
