Allow remapping a key to open url in addition to space and enter

--- a/urlscan.1
+++ b/urlscan.1
@@ -112,33 +112,35 @@ altered. To unset a binding, set it equal to "". The follow actions are
 supported:
 
 .TP
-\fBall_escape\fR \-\- toggle unescape all URLs
+\fBall_escape\fR \-\- toggle unescape all URLs (Default: \fBu\fR)
 .TP
-\fBall_shorten\fR \-\- toggle shorten all URLs
+\fBall_shorten\fR \-\- toggle shorten all URLs (Default: \fBS\fR)
 .TP
-\fBbottom\fR \-\- move cursor to last item
+\fBbottom\fR \-\- move cursor to last item (Default: \fBG\fR)
 .TP
-\fBclear_screen\fR \-\- redraw screen
+\fBclear_screen\fR \-\- redraw screen (Default: \fBCtrl-l\fR)
 .TP
-\fBclipboard\fR \-\- copy highlighted URL to clipboard using xsel/xclip
+\fBclipboard\fR \-\- copy highlighted URL to clipboard using xsel/xclip (Default: \fBC\fR)
 .TP
-\fBconfig_create\fR \-\- create ~/.config/urlscan/config.json
+\fBconfig_create\fR \-\- create ~/.config/urlscan/config.json (Default: \fBP\fR)
 .TP
-\fBcontext\fR \-\- show/hide context
+\fBcontext\fR \-\- show/hide context (Default: \fBc\fR)
 .TP
-\fBdown\fR \-\- cursor down
+\fBdown\fR \-\- cursor down (Default: \fBj\fR)
 .TP
-\fBhelp_menu\fR \-\- show/hide help menu
+\fBhelp_menu\fR \-\- show/hide help menu (Default: \fBF1\fR)
 .TP
-\fBpalette\fR \-\- cycle through palettes
+\fBopen_url\fR \-\- open selected URL (Default: \fBspace\fR or \fBenter\fR)
 .TP
-\fBquit\fR \-\- quit
+\fBpalette\fR \-\- cycle through palettes (Default: \fBp\fR)
 .TP
-\fBshorten\fR \-\- toggle shorten highlighted URL
+\fBquit\fR \-\- quit (Default: \fBq\fR or \fBQ\fR)
 .TP
-\fBtop\fR \-\- move to first list item
+\fBshorten\fR \-\- toggle shorten highlighted URL (Default: \fBs\fR)
 .TP
-\fBup\fR \-\- cursor up
+\fBtop\fR \-\- move to first list item (Default: \fBg\fR)
+.TP
+\fBup\fR \-\- cursor up (Default: \fBk\fR)
 
 .SH FILES
 
