Cycle through opening links with webbrowser module, xdg-open or --run argument
Related to #51.

--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "April 4, 2019"
+.TH URLSCAN 1 "May 29, 2019"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
@@ -52,10 +52,15 @@ for color options and allowed values.
 
 \fB7.\fR \fBu\fR will unescape the highlighted URL if necessary.
 
-\fB8.\fR Run a command with the selected URL as the argument or pipe the selected
-  URL to a command using the \fB--run\fR and \fB--pipe\fR arguments.
+\fB8.\fR Run a command with the selected URL as the argument or pipe the
+selected URL to a command using the \fB--run\fR and \fB--pipe\fR arguments.
 
-\fB9.\fR \fBF1\fR shows the help menu.
+\fB9.\fR Use \fBl\fR to cycle through whether URLs are opened using the Python
+webbrowser module (default), xdg-open (if installed) or a function passed on the
+command line with \fB--run\fR. The \fB--run\fR function will respect the value
+of \fB--pipe\fR.
+
+\fB10.\fR \fBF1\fR shows the help menu.
 
 .SH OPTIONS
 .TP
@@ -78,9 +83,10 @@ Useful for scripting (implies \fB\-\-compact\fR).
 .TP
 .B \-r, \-\-run \<expression\>
 Execute \<expression\> in place of opening URL with a browser. Use {} in
-\<expression\> to substitute in the URL. Example:
+\<expression\> to substitute in the URL. Examples:
 
     $ urlscan --run 'echo {} | xclip -i' file.txt
+    $ urlscan --run 'tmux set buffer {}'
 .TP
 .B \-p, \-\-pipe
 Pipe the selected URL to the command specified by `--run`. This is preferred
@@ -136,6 +142,8 @@ The follow actions are supported:
 \fBdown\fR \-\- cursor down (Default: \fBj\fR)
 .TP
 \fBhelp_menu\fR \-\- show/hide help menu (Default: \fBF1\fR)
+.TP
+\fBlink_handler\fR \-\- cycle link handling (webbrowser, xdg-open or custom) (Default: \fBl\fR)
 .TP
 \fBopen_url\fR \-\- open selected URL (Default: \fBspace\fR or \fBenter\fR)
 .TP
