Remove python2 compatibility

--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "May 29, 2019"
+.TH URLSCAN 1 "30 August 2019"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
