Add --width flag to change displayed width. Closes #92.

--- a/urlscan.1
+++ b/urlscan.1
@@ -48,7 +48,7 @@ and keybindings. See
 
 http://urwid.org/manual/displayattributes.html#display-attributes
 
-for color options and allowed values.
+for color options and allowed values. Set display width with `--width`.
 
 \fB7.\fR \fBu\fR will unescape the highlighted URL if necessary.
 
@@ -102,6 +102,9 @@ Reverse displayed order of URLs.
 Exit urlscan after opening or copying a single browser link.
 
     $ urlscan -s file.txt
+.TP
+.B \-w, \-\-width
+Set display width.
 
 .SH MUTT INTEGRATION
 
