--- a/urlscan.1
+++ b/urlscan.1
@@ -1,6 +1,6 @@
 .\"                                      Hey, EMACS: -*- nroff -*-
 
-.TH URLSCAN 1 "15 May 2020"
+.TH URLSCAN 1 "6 March 2021"
 
 .SH NAME
 urlscan \- browse the URLs in an email message from a terminal
@@ -53,12 +53,13 @@ for color options and allowed values. Set display width with `--width`.
 \fB7.\fR \fBu\fR will unescape the highlighted URL if necessary.
 
 \fB8.\fR Run a command with the selected URL as the argument or pipe the
-selected URL to a command using the \fB--run\fR and \fB--pipe\fR arguments.
+selected URL to a command using the \fB--run-safe\fR, \fB--run\fR and
+\fB--pipe\fR arguments.
 
 \fB9.\fR Use \fBl\fR to cycle through whether URLs are opened using the Python
 webbrowser module (default), xdg-open (if installed) or a function passed on the
-command line with \fB--run\fR. The \fB--run\fR function will respect the value
-of \fB--pipe\fR.
+command line with \fB--run-safe\fR or \fB--run\fR. The \fB--run\fR and
+\fB--run-safe\fR functions will respect the value of \fB--pipe\fR.
 
 \fB10.\fR \fBF1\fR shows the help menu.
 
@@ -84,19 +85,25 @@ Remove duplicated URLs from the list of URLs.
 Disables the selection interface and print the links to standard output.
 Useful for scripting (implies \fB\-\-compact\fR).
 .TP
-.B \-r, \-\-run \<expression\>
+.B \-f, \-\-run\-safe \<expression\>
 Execute \<expression\> in place of opening URL with a browser. Use {} in
 \<expression\> to substitute in the URL. Examples:
 
+    $ urlscan --run-safe 'tmux set buffer {}'
+.TP
+.B \-r, \-\-run \<expression\>
+Execute \<expression\> in place of opening URL with a browser. Use {} in
+\<expression\> to substitute in the URL. Shell features such as \| and \> can be
+used, but it is less secure. Examples:
+
     $ urlscan --run 'echo {} | xclip -i' file.txt
-    $ urlscan --run 'tmux set buffer {}'
 .TP
 .B \-p, \-\-pipe
-Pipe the selected URL to the command specified by `--run`. This is preferred
-when the command supports it, as it is more secure and tolerant of special
-characters in the URL. Example:
+Pipe the selected URL to the command specified by `--run-safe` or `--run`. This
+is preferred when the command supports it, as it is more secure and tolerant of
+special characters in the URL. Example:
 
-    $ urlscan --run 'xclip -i' --pipe file.txt
+    $ urlscan --run-safe 'xclip -i' --pipe file.txt
 .TP
 .B \-R, \-\-reverse
 Reverse displayed order of URLs.
