--- a/urlscan.1
+++ b/urlscan.1
@@ -109,7 +109,7 @@ Set display width.
 .B \-E, \-\-regex \<expression\>
 Use \<expression\> in place of the default set of regular expressions,
 to be used for any kind of matching. This is useful for example when
-selectively avoiding 'mailto:' links or any other patterns that urlscan
+selectively avoiding 'mailto:' links or any other pattern that urlscan
 could interpret as urls (such as '<filename>.<extension>'). Usage
 example:
 
