Update documentation for feature --whitespace-off

--- a/urlscan.1
+++ b/urlscan.1
@@ -128,6 +128,10 @@ example:
 .B \-\-headers
 Scan email headers for URLs.
 
+.TP
+.B \-W, \-\-whitespace-off
+Suppress output of blank lines and ellipses lines.
+
 .SH MUTT INTEGRATION
 
 To integrate urlscan with mutt, include the following two commands in
