--- a/urlscan.1
+++ b/urlscan.1
@@ -66,6 +66,8 @@ command line with \fB--run-safe\fR or \fB--run\fR. The \fB--run\fR and
 \fB11.\fR Scan certain email headers for URLs. Currently \fBLink\fR,
 \fBArchived-At\fR and \fBList-*\fR are scanned when \fB--headers\fR is passed.
 
+\fB12.\fR Queue multiple URLs for opening and open them all at once with \fBa\fR and \fBo\fR.
+
 .SH OPTIONS
 .TP
 .B \-c, \-\-compact
@@ -162,6 +164,8 @@ To unset a binding, set it equal to "". For example: \fB"P": ""\fR
 
 The follow actions are supported:
 .TP
+\fBadd_url\fR \-\- add a URL to the queue (Default: \fBa\fR)
+.TP
 \fBall_escape\fR \-\- toggle unescape all URLs (Default: \fBu\fR)
 .TP
 \fBall_shorten\fR \-\- toggle shorten all URLs (Default: \fBS\fR)
@@ -176,11 +180,17 @@ The follow actions are supported:
 .TP
 \fBcontext\fR \-\- show/hide context (Default: \fBc\fR)
 .TP
+\fBdel_url\fR \-\- delete URL from the queue (Default: \fBd\fR)
+.TP
 \fBdown\fR \-\- cursor down (Default: \fBj\fR)
 .TP
 \fBhelp_menu\fR \-\- show/hide help menu (Default: \fBF1\fR)
 .TP
 \fBlink_handler\fR \-\- cycle link handling (webbrowser, xdg-open or custom) (Default: \fBl\fR)
+.TP
+\fBopen_queue\fR \-\- open all URLs in queue (Default: \fBo\fR)
+.TP
+\fBopen_queue_win\fR \-\- open all URLs in queue in new window (Default: \fBO\fR)
 .TP
 \fBopen_url\fR \-\- open selected URL (Default: \fBspace\fR or \fBenter\fR)
 .TP
