Update email address

--- a/urlscan.1
+++ b/urlscan.1
@@ -218,4 +218,4 @@ Only required if additional or modified palettes or keybindings are desired.
 \fBmutt\fR(1)
 
 .SH AUTHOR
-This manual page was written by Daniel Burrows <dburrows@debian.org> and Scott Hansen <firecat4153@gmail.com>
+This manual page was written by Daniel Burrows <dburrows@debian.org> and Scott Hansen <tech@firecat53.net>
