Correct escaped pipe character in urlscan.1

--- a/urlscan.1
+++ b/urlscan.1
@@ -118,7 +118,7 @@ Reverse displayed order of URLs.
 .TP
 .B \-r, \-\-run \<expression\>
 Execute \<expression\> in place of opening URL with a browser. Use {} in
-\<expression\> to substitute in the URL. Shell features such as \| and \> can be
+\<expression\> to substitute in the URL. Shell features such as | and \> can be
 used, but it is less secure. Examples:
 
     $ urlscan --run 'echo {} | xclip -i' file.txt
