Update documentation to include the new keybindings

--- a/urlscan.1
+++ b/urlscan.1
@@ -188,6 +188,8 @@ The follow actions are supported:
 .TP
 \fBlink_handler\fR \-\- cycle link handling (webbrowser, xdg-open or custom) (Default: \fBl\fR)
 .TP
+\fBnext\fR \-\- jump to next URL (Default: \fBJ\fR)
+.TP
 \fBopen_queue\fR \-\- open all URLs in queue (Default: \fBo\fR)
 .TP
 \fBopen_queue_win\fR \-\- open all URLs in queue in new window (Default: \fBO\fR)
@@ -195,6 +197,8 @@ The follow actions are supported:
 \fBopen_url\fR \-\- open selected URL (Default: \fBspace\fR or \fBenter\fR)
 .TP
 \fBpalette\fR \-\- cycle through palettes (Default: \fBp\fR)
+.TP
+\fBprevious\fR \-\- jump to previous URL (Default: \fBK\fR)
 .TP
 \fBquit\fR \-\- quit (Default: \fBq\fR or \fBQ\fR)
 .TP
